--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
    			<div class="col-twelve">
 
 	   			<h5>Hello, World.</h5>
-	   			<h1>I'm testing.</h1>
+	   			<h1>I'm Rubens Pessoa.</h1>
 
 	   			<p class="intro-position">
 	   				<span>iOS Developer</span>
