starting to improve the text

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
    				<img src="images/profile-pic.jpg" alt="Profile Picture">
 
-   				<p class="lead">Hello, I am Rubens Pessoa, 22 years old. I love to solve problems, play guitar and watch movies. I also try hard to do some workout. If you meet me, you'll realize that I always willing to do great things.</p>
+   				<p class="lead">Hello, I am Rubens Pessoa, 22 years old. I love to solve problems, play guitar and watch movies. I also try hard to do some workout. If you meet me, you'll realize that I'm always willing to do great things.</p>
    			</div>   			
 
    		</div>   		
@@ -126,7 +126,7 @@ problem solving, data science and web/mobile enthusiastic.</p>
    		<div class="col-six tab-full">
 
    			<h3>Skills</h3>
-   			<p>I'm a very curious guy and I'm always trying to learn something new. These are the skills that I have the most experience.</p>
+   			<p>I'm always learning something new. But these are the skills I have the most experience.</p>
 
 				<ul class="skill-bars">
 				   <li>
