Added github links

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 		<li><a href="https://twitter.com/rubenspbf"><i class="fa fa-twitter"></i></a></li>
 		<li><a href="https://www.instagram.com/rubenspbf/"><i class="fa fa-instagram"></i></a></li>
 		<li><a href="https://www.linkedin.com/in/pessoadebarros/"><i class="fa fa-linkedin"></i></a></li>
+		<li><a href="https://github.com/rubenspessoa"><i class="fa fa-github"></i></a></li>
 		<li><a href="skype:rubens.pessoa.de.barros.filho"><i class="fa fa-skype"></i></a></li>
     </ul> <!-- /intro-social -->      	
 
@@ -350,6 +351,7 @@ problem solving, data science and web/mobile enthusiastic.</p>
 					<li><a href="https://twitter.com/rubenspbf"><i class="fa fa-twitter"></i></a></li>
 					<li><a href="https://www.instagram.com/rubenspbf/"><i class="fa fa-instagram"></i></a></li>
 					<li><a href="https://www.linkedin.com/in/pessoadebarros/"><i class="fa fa-linkedin"></i></a></li>
+					<li><a href="https://github.com/rubenspessoa"><i class="fa fa-github"></i></a></li>
 					<li><a href="skype:rubens.pessoa.de.barros.filho"><i class="fa fa-skype"></i></a></li>
 			   </ul> 
 	      		
