--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ problem solving, data science and web/mobile enthusiastic.</p>
    	<div class="row button-section">
    		<div class="col-twelve">
    			<a href="#contact" title="Hire Me" class="button stroke smoothscroll">Hire Me</a>
-   			<a href="#" title="Download CV" class="button button-primary">Download CV</a>
+   			<a href="https://docs.google.com/gview?url=https://github.com/rubenspessoa/rubenspessoa.github.io/raw/master/curriculum/curriculum_vitae_rubensp.pdf&embedded=true" title="Download CV" class="button button-primary">Download CV</a>
    		</div>   		
    	</div>
 
