Adding portolio && changing a few things

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
    				<img src="images/profile-pic.jpg" alt="Profile Picture">
 
-   				<p class="lead">"Hello, I am Rubens Pessoa, 22 years old. I love to solve problems, play guitar and watch movies. I also try hard to do some workout. If you meet me, you'll realize that I'm always willing to do great things."</p>
+   				<p class="lead">"Hello! I'm Rubens Pessoa, 22 years old. I love to solve problems, play guitar and watch movies. If you meet me, you'll realize that I'm always willing to do great things."</p>
    			</div>   			
 
    		</div>   		
@@ -95,7 +95,7 @@
    		<div class="col-six tab-full">
 
    			<h3>Profile</h3>
-   			<p>Majoring in CS at Federal University of Alagoas, Brazil. iOS Developer Intern at Ilhasoft since April 2017. Proactive,
+   			<p>I'm Majoring in CS at Federal University of Alagoas, Brazil. iOS Developer Intern at Ilhasoft since April 2017. Proactive,
 problem solving, data science and web/mobile enthusiastic.</p>
 
    			<ul class="info-list">
@@ -106,10 +106,6 @@ problem solving, data science and web/mobile enthusiastic.</p>
    				<li>
    					<strong>Birth Date:</strong>
    					<span>January 31, 1995</span>
-   				</li>
-   				<li>
-   					<strong>Job:</strong>
-   					<span>iOS Developer</span>
    				</li>
    				<li>
    					<strong>Website:</strong>
@@ -127,31 +123,21 @@ problem solving, data science and web/mobile enthusiastic.</p>
    		<div class="col-six tab-full">
 
    			<h3>Skills</h3>
-   			<p>I'm always learning something new. My interests range from arduino projects, web and mobile applications to data analysis. Recently my main focus has been to mobile development. These are the skills I have the most experience.</p>
+   			<p>I'm always learning something new. My interests range from arduino projects, web/mobile applications to data analysis. Recently my main focus has been to mobile development. These are the skills I have the most experience.</p>
 
 				<ul class="skill-bars">
 				   <li>
-				   	<div class="progress percent80"><span>80%</span></div>
+				   	<div class="progress percent90"><span>90%</span></div>
 				   	<strong>iOS Dev</strong>
 				   </li>
 				   <li>
-				   	<div class="progress percent65"><span>65%</span></div>
+				   	<div class="progress percent70"><span>70%</span></div>
 				   	<strong>Android Dev</strong>
 				   </li>
 				   <li>
-				   	<div class="progress percent90"><span>90%</span></div>
-				   	<strong>Python</strong>
-				   </li>
-				   <li>
-				   	<div class="progress percent80"><span>90%</span></div>
-				   	<strong>Swift</strong>
-				   </li>
-				   <li>
-
 				   	<div class="progress percent65"><span>65%</span></div>
-				   	<strong>Objective-C</strong>
+				   	<strong>Data Analysis</strong>
 				   </li>
-      
 				</ul> <!-- /skill-bars -->		
 
    		</div>
@@ -277,6 +263,35 @@ problem solving, data science and web/mobile enthusiastic.</p>
    	</div> <!-- /resume-timeline -->
 		
 	</section> <!-- /features -->
+
+	<section id="portfolio">
+			<div class="row section-intro">
+					<div class="col-twelve">
+						<h5>Portfolio</h5>
+						<h1>Check Out Some of My Works.</h1>
+					</div>   		
+			</div>
+
+			<div class="row portfolio-content">
+					<div class="col-twelve">
+						<center>
+								<img src="images/appelou-logo.png">
+						</center>
+						
+					</div>
+			</div>
+
+			<div class="row portfolio-content">	
+					<div class="col-twelve">
+						<center>
+							<br>
+								<a href="https://itunes.apple.com/br/app/appelou/id1279135302?l=en&mt=8" target="_blank"><img src="images/available-on-the-app-store.png" width="150" height="52" alt="Appstore Logo"></a>					
+						</center>
+					</div>
+			</div>
+
+		
+	</section>
 	
    <!-- contact
    ================================================== -->
