--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@ problem solving, data science and web/mobile enthusiastic.</p>
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Bachelor Degree</h3>
+	   					<h3>Bachelor's Degree</h3>
 	   					<p>Jan 2014 - Now</p>
 	   				</div>
 
@@ -263,35 +263,6 @@ problem solving, data science and web/mobile enthusiastic.</p>
    	</div> <!-- /resume-timeline -->
 		
 	</section> <!-- /features -->
-
-	<section id="portfolio">
-			<div class="row section-intro">
-					<div class="col-twelve">
-						<h5>Portfolio</h5>
-						<h1>Check Out Some of My Works.</h1>
-					</div>   		
-			</div>
-
-			<div class="row portfolio-content">
-					<div class="col-twelve">
-						<center>
-								<img src="images/appelou-logo.png">
-						</center>
-						
-					</div>
-			</div>
-
-			<div class="row portfolio-content">	
-					<div class="col-twelve">
-						<center>
-							<br>
-								<a href="https://itunes.apple.com/br/app/appelou/id1279135302?l=en&mt=8" target="_blank"><img src="images/available-on-the-app-store.png" width="150" height="52" alt="Appstore Logo"></a>					
-						</center>
-					</div>
-			</div>
-
-		
-	</section>
 	
    <!-- contact
    ================================================== -->
